<resources>
    <string name="app_name">RC Programmer</string>

    <string name="menu_about">About</string>
    <string name="menu_functions">Functions</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>


    <string name="dialog_title_function_name">Function name</string>
    <string name="dialog_title_add_code_block">Add item</string>
    <string name="dialog_title_save_changes_alert">Save changes?</string>
    <string name="dialog_title_rename">New name</string>


    <string name="err_test_text">This message should not be here!</string>

    <string name="err_speech_recognition_not_supported">Error: Speech recognition not supported!</string>
    <string name="err_not_connected_to_rc_device">Error: Not connected to RC Device</string>

    <string name="err_failed_to_save">Error: Failed to save file!</string>


    <string name="btn_OK">OK</string>
    <string name="btn_Cancel">Cancel</string>
    <string name="btn_Yes">Yes</string>
    <string name="btn_No">No</string>

    <string name="btn_desc_connect">Connect to RC Device</string>
    <string name="btn_desc_rc_device_data">RC Device data</string>
    <string name="btn_desc_info">Info</string>
    <string name="btn_desc_voice_command">Voice command</string>

    <string name="btn_desc_rename">Rename</string>
    <string name="btn_desc_copy">Copy</string>
    <string name="btn_desc_undo">Undo</string>
    <string name="btn_desc_redo">Redo</string>
    <string name="btn_desc_save">Save</string>


    <string name="txt_function_info_default_title">Title</string>
    <string name="txt_function_info_description">Description</string>
    <string name="txt_function_info_parameters">Parameters</string>
    <string name="txt_function_info_parameter_type">Type</string>
    <string name="txt_function_info_parameter_description">Description</string>
    <string name="txt_function_info_return_value">Return Value</string>
    <string name="txt_function_info_notes">Notes</string>


    <string name="prompt_say_command">Say something!</string>
    <string name="msg_successfully_connected_to_rc_device">Connected to RC Device!</string>
    <string name="btn_speech_cmd">Say command</string>


    <string name="msg_save_successful">File saved!</string>


    <string name="open">Open</string>
    <string name="close">Close</string>


    <!-- Strings related to Settings -->

    <!-- Connection settings -->
    <string name="pref_header_connection">Connection</string>

    <string name="pref_title_rc_device_address">RC Device Address</string>
    <string name="pref_title_connection_timeout">Connection timeout (in ms)</string>


    <!-- Code settings -->
    <string name="pref_header_code">Code</string>

    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_title_display_size_percentage">Display size</string>
    <string name="pref_title_hide_add_code_button">Hide \'add code\' button</string>


    <!-- Language settings -->
    <string name="pref_header_lang">Language</string>

    <string name="pref_category_code_language">Code</string>
    <string name="pref_title_override_code_language">Override Code Language</string>
    <string name="pref_title_code_language">Code Language</string>

    <string name="pref_category_command_language">Commands</string>
    <string name="pref_title_command_language">Command Language</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
