<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rcprogrammer.remoteprogrammer.codeeditor.InfoActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtCodeBlockName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:text="@string/txt_function_info_default_title"
                android:textSize="36sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/groupCodeBlockDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_function_info_description"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtCodeBlockDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/txt_function_info_description"
                    android:textSize="12sp"
                    />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/groupCodeBlockParameters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_function_info_parameters"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/listCodeBlockParameters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#000000"
                    android:layout_margin="8dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:background="#ffffff"
                            android:layout_marginStart="1dp"
                            android:layout_marginLeft="1dp"
                            android:layout_marginTop="1dp"
                            android:layout_marginBottom="1dp"
                            android:padding="4dp"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:text="@string/txt_function_info_parameter_type"/>

                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:background="#ffffff"
                            android:layout_margin="1dp"
                            android:padding="4dp"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:text="@string/txt_function_info_parameter_description"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tableRowCodeBlockParameterExample"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtCodeBlockParameterTypeExample"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:background="#ffffff"
                            android:layout_marginStart="1dp"
                            android:layout_marginLeft="1dp"
                            android:layout_marginBottom="1dp"
                            android:padding="4dp"
                            android:gravity="center"
                            android:text="@string/txt_function_info_parameter_type"/>

                        <TextView
                            android:id="@+id/txtCodeBlockParameterDescExample"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:background="#ffffff"
                            android:layout_marginStart="1dp"
                            android:layout_marginLeft="1dp"
                            android:layout_marginBottom="1dp"
                            android:layout_marginEnd="1dp"
                            android:layout_marginRight="1dp"
                            android:padding="4dp"
                            android:text="@string/txt_function_info_parameter_description"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/groupCodeBlockReturnValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_function_info_return_value"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtCodeBlockReturnValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/txt_function_info_return_value"
                    android:textSize="12sp"
                    />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/groupCodeBlockNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_function_info_notes"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtCodeBlockNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/txt_function_info_notes"
                    android:textSize="12sp"
                    />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
